Fix text alignment in index.css and add space converter page

--- a/css/index.css
+++ b/css/index.css
@@ -237,7 +237,7 @@
 	font-size: 0.83vw;
 	font-family: TimesNewRomanPSMT;
 	font-weight: normal;
-	text-align: justifyLeft;
+	text-align: left;
 	line-height: 1.62vw;
 	margin: 3.12vw 0 0 0.15vw;
 }
